--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cra-template-typescript": "1.2.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.0",
@@ -59,6 +60,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/jszip": "^3.4.0",
     "@types/react-router-dom": "^5.3.3",
     "cross-env": "^7.0.3"
   }
